--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -116,7 +116,7 @@ h2 {
     margin: 0;
 }
 .book, .join {
-    background-color: green;
+    background-color: rgb(198, 218, 27);
     color : red;
     text-decoration: none;
     font-size : 18px;
