--- a/wwr/positionstyles.css
+++ b/wwr/positionstyles.css
@@ -34,6 +34,7 @@
 /* Activity 2 styles */ 
 .content2 {
   /* This is the parent of the activity 2 boxes. */
+  
 }
 .red2 {
   width: 100px; 
@@ -63,34 +64,44 @@
 } 
 /* Activity 3 styles */ 
 .content3 {
-  /* This is the parent of the activity 3 boxes. */
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 20px;
+  grid-template-columns: 600px 600px;
+/*  grid-template-columns: 1fr 1fr;*/
+  grid-row: auto auto;
+  height: 200px;
+  /* This is the parent of the activity 3 boxes. 
+  display: grid;
+  grid-template-columns: auto auto ;
+  grid-row: 200px 200px;*/
+  grid-column-gap: 100px;
+  
 }
 .red3 {
   width: 100%; 
   height: 100px; 
   background-color: red; 
+  
+  grid-column: 1/3;
 } 
 .green3 {
-  width: 40%; 
-  height: 100px; 
+  width: 100%; 
+  height: 200px; 
   background-color: green;
-  grid-column: 1/2; 
   justify-items: left;
 } 
 .yellow3 {
-  width: 40%; 
-  height: 100px; 
+  width: 100%; 
+  height: 200px; 
   background-color: gold; 
-  grid-column: 1/2; 
+  
   justify-items: right;
 } 
 .blue3 {
   width: 100%;
   height: 100px; 
   background-color: blue; 
+  
+  grid-column: 1/3;
 } 
 /* Activity 4 styles */ 
 .content4 {
@@ -103,14 +114,15 @@
 }
 .red4 {
   width: 100%; 
-  height: 100; 
+  height: 100px; 
   background-color: red; 
-  grid-row: 1/4;
+  grid-column: 1/4;
 } 
 .green4 {
   width: 100%; 
   height: 100%; 
   background-color: green; 
+  
 } 
 .yellow4 {
   width: 100%; 
@@ -121,6 +133,8 @@
   width: 100%; 
   height: 100%; 
   background-color: blue; 
+  
+  grid-column: 1/4;
 } 
 /* Activity 5 styles */ 
 .content5 {
@@ -153,26 +167,31 @@
 /* Activity 6 styles */ 
 .content6 {
   /* This is the parent of the activity 6 boxes. */
+ 
+  position:relative;
 }
 .red6 {
   width: 400px; 
   height: 200px; 
   background-color: red; 
-  z-index: 4;
+  z-index:2;
+  
 } 
 .green6 {
   width: 200px; 
   height: 200px; 
+  position: relative;
   background-color: green; 
-  z-index: 1;
+  z-index: 3;
   margin-top: 200px;
   margin-left: 0px;
 } 
 .yellow6 {
   width: 200px; 
   height: 400px; 
+  position: relative;
   background-color: gold; 
-  z-index:0;
+  z-index:4;
   margin-top: -400px;
   margin-left: 400px;
 } 
@@ -180,7 +199,8 @@
   width: 400px; 
   height: 400px; 
   background-color: blue; 
-  z-index: -1;
+  position: relative;
+  z-index:0;
   margin-top: -500px;
   margin-left: 100px;
 } 
