--- a/personalsite/styles/site-plan.css
+++ b/personalsite/styles/site-plan.css
@@ -5,10 +5,10 @@ Fonts are separated by a | */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #396E94   ;
-  --secondary-color: #E7C24F ;
-  --accent1-color: #A42212;
-  --accent2-color: white;
+  --primary-color: #191fe0   ;
+  --secondary-color: #2ee026 ;
+  --accent1-color: #e07a10;
+  --accent2-color: #e0b709;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "IM Fell French Canon SC";
