--- a/wwr/positionstyles.css
+++ b/wwr/positionstyles.css
@@ -32,10 +32,10 @@
   grid-column: 1/3; 
 } 
 /* Activity 2 styles */ 
-.content2 {
-  /* This is the parent of the activity 2 boxes. */
+/*.content2 {
+  / * This is the parent of the activity 2 boxes. * /
   
-}
+}*/
 .red2 {
   width: 100px; 
   height: 100px; 
