--- a/personalsite/styles/site-plan.css
+++ b/personalsite/styles/site-plan.css
@@ -2,7 +2,7 @@
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a | */
 @import url('https://fonts.googleapis.com/css?family=Indie+Flower|Raleway');
-
+/* This should work... WHY NOT */
 :root {
   /* change the values below to your colors from your palette */
   --primary-color: #191fe0   ;
