--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,7 +1,8 @@
 .parent {
     display: grid;
     grid-template-columns: 1fr 2fr 1fr 2fr 1fr 2fr;
-    grid-template-rows: repeat(3, 1fr) 3fr;
+    /*grid-template-rows: repeat(3, 1fr) 3fr;
+    */
     grid-column-gap: 9px;
     grid-row-gap: 0px;
     }
@@ -42,8 +43,8 @@ nav {
 }
 
 
-#logo_link2  {
-    width: 400px;
+.logo  {
+    width: 80px;
     padding-top: 5px;
     justify-self: center;
     align-self: center;
@@ -177,9 +178,14 @@ nav {
     padding-bottom: 15px;
 }
 
+h3 {
+    
+    text-align: center;
+}
 h1, h2, h3, h4, h5, h6 {
     font-family: Niconne;
     color: var(--headline-color-on-white);
+    text-align: center;
   }
  #content {
     max-width: 1600px;
