--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -10,7 +10,10 @@
     .div1 { grid-area: 1 / 1 / 2 / 7; }
     .div2 { grid-area: 2 / 1 / 3 / 7; 
         display: block;
-        margin: 0 auto;}
+        margin: 0 auto;
+        width: 800px;
+    padding-top: 5px;
+    }
     .div3 { grid-area: 3 / 1 / 4 / 2; }
     .div4 { grid-area: 3 / 2 / 4 / 3; }
     .div5 { grid-area: 4 / 2 / 5 / 3; }
