contact us form

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -24,6 +24,20 @@
     .div10 { grid-area: 3 / 6 / 4 / 7; }
     .div11 { grid-area: 4 / 6 / 5 / 7; }
      
+    #feedback {
+        background-color: antiquewhite;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        padding: .5em;
+        /* make this element invisible until we are ready for it */
+        display: none;      
+    }
+    .moveDown {
+        margin-top: 3em;
+    }
+               
 
 nav {
 
