form not hidden

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -31,8 +31,8 @@
         left: 0;
         right: 0;
         padding: .5em;
-        /* make this element invisible until we are ready for it 
-        display: none;      */
+        /* make this element invisible until we are ready for it  */
+        display: none;     
     }
     .moveDown {
         margin-top: 3em;
