--- a/rune/styles/site-plan1.css
+++ b/rune/styles/site-plan1.css
@@ -25,8 +25,7 @@
 .pathway{  grid-column: 1 / span 4;}
 .edtime2{  grid-column: 1 / span 4;}
 .edinfo2{  grid-column: 1 / span 5;}
-.experience {  grid-column: 1 / span 4;
-text-align: left;}
+.experience {  grid-column: 1 / span 4;}
 .company1{  grid-column: 1 / span 4;}
 .time1{grid-column: 1 / span 4;}
 .experience1{grid-column: 1 / span 4;}
