--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,8 +1,7 @@
 .parent {
     display: grid;
     grid-template-columns: 1fr 2fr 1fr 2fr 1fr 2fr;
-    /*grid-template-rows: repeat(3, 1fr) 3fr;
-    */
+    /*grid-template-rows: repeat(3, 1fr) 3fr;*/
     grid-column-gap: 9px;
     grid-row-gap: 0px;
     }
