--- a/rune/styles/site-plan.css
+++ b/rune/styles/site-plan.css
@@ -1,4 +1,60 @@
+body {
+  background-color:#E7E9EB;
+}
+#myDIV {
+  height:300px;
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  gap: 10px;
+  padding: 10px;
+}
 
+ul.item6 {
+  list-style-position: outside;
+}
+#myDIV item6 {
+  background-color: rgba(255, 255, 255, 0.8);
+  list-style-position: outside;
+  font-size: 20px;
+}
+
+li {
+  list-style-position: outside;
+  padding-left: 0.5em;
+}
+#myDIV div {
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: left;
+  padding: 20px 0;
+  font-size: 2  0px;
+}
+.item1 {
+  grid-column: 1 / span 4;
+}
+.item2 {
+  grid-column: 1 / span 2;
+}
+.item3 {
+  grid-column: 3 / span 2;
+}
+.item4 {
+  grid-column: 1 / span 2;
+}
+.item5 {
+  grid-column: 3 / span 2;
+}
+.item6 {
+  grid-column: 1 / span 4;
+}
+.item7 {
+  grid-column: 1 / span 2;
+}
+.item8 {
+  grid-column: 1 / span 2;
+}
+.item9 {
+  grid-column: 1 / span 2;
+}
    
   body {
     background-color:#E7E9EB;
