--- a/rune/styles/site-plan2.css
+++ b/rune/styles/site-plan2.css
@@ -1,45 +1,60 @@
-
-   
-  body {
+body {
     background-color:#E7E9EB;
   }
   #myDIV {
+    height:300px;
     display: grid;
     grid-template-columns: auto auto auto auto;
     gap: 10px;
-    background-color: #2196F3;
     padding: 10px;
+  }
+  
+  ul.item6 {
+    list-style-position: outside;
+  }
+  #myDIV item6 {
+    background-color: rgba(255, 255, 255, 0.8);
+    list-style-position: outside;
+    font-size: 20px;
+  }
+  
+  li {
+    list-style-position: outside;
+    padding-left: 0.5em;
   }
   #myDIV div {
     background-color: rgba(255, 255, 255, 0.8);
-    text-align: center;
+    text-align: left;
     padding: 20px 0;
-    font-size: 20px;
+    font-size: 2  0px;
   }
-  .icon-nav {  grid-column: 1 / span 4;}
-.intro{ grid-column: 1 / span 4;}
-.edu-heading{  grid-column: 1 / span 4;}
-.byu{  grid-column: 1 / span 4;}
-.edtime1{  grid-column: 1 / span 4;}
-.edinfo1{  grid-column: 1 / span 4;}
-.pathway{  grid-column: 1 / span 4;}
-.edtime2{  grid-column: 1 / span 4;}
-.edinfo2{  grid-column: 1 / span 5;}
-.experience {  grid-column: 1 / span 4;
-text-align: left;}
-.company1{  grid-column: 1 / span 4;}
-.time1{grid-column: 1 / span 4;}
-.experience1{grid-column: 1 / span 4;}
-.company2{  grid-column: 1 / span 4;}
-.time2{grid-column: 1 / span 4;}
-.experience2{grid-column: 1 / span 4;}
-.company3{  grid-column: 1 / span 4;}
-.time3{grid-column: 1 / span 4;}
-.experience3{grid-column: 1 / span 4;}
-.time1{grid-column: 1 / span 4;}
-.time1{grid-column: 1 / span 4;}
-.time1{grid-column: 1 / span 4;}
-.time1{grid-column: 1 / span 4;}
+  .item1 {
+    grid-column: 1 / span 4;
+  }
+  .item2 {
+    grid-column: 1 / span 2;
+  }
+  .item3 {
+    grid-column: 3 / span 2;
+  }
+  .item4 {
+    grid-column: 1 / span 2;
+  }
+  .item5 {
+    grid-column: 3 / span 2;
+  }
+  .item6 {
+    grid-column: 1 / span 4;
+  }
+  .item7 {
+    grid-column: 1 / span 2;
+  }
+  .item8 {
+    grid-column: 1 / span 2;
+  }
+  .item9 {
+    grid-column: 1 / span 2;
+  }
 .item7 {  grid-column: 3 / span 2;}
   .logo  {
     width: 80px;
