--- a/rune/styles/site-plan2.css
+++ b/rune/styles/site-plan2.css
@@ -238,7 +238,7 @@ input[type=submit]:hover {
   display: inline;
   padding: 50px;
 }
-.item1 {
+/*.item1 {
   grid-column: 1 / span 2;
 }
 .item2 {
@@ -246,7 +246,7 @@ input[type=submit]:hover {
 }
 
 
-/* bio hide details with css   */
+ bio hide details with css   */
 
  .details, 
  .show,
