--- a/rune/styles/site-plan3.css
+++ b/rune/styles/site-plan3.css
@@ -7,7 +7,12 @@ body {
     gap: 10px;
     padding: 10px;
   }
-  
+  #inHeader {
+    max-width: 1600px;
+    margin: 0 auto;
+    /*margin-right: 0 auto;*/
+}
+
   ul.item6 {
     list-style-position: outside;
   }
@@ -357,7 +362,18 @@ li{
   width: 25%;
   height: 3em;
 }
-
+.column {
+    float: left;
+    width: 12.5%;
+    padding: 5px;
+  }
+  
+  /* Clearfix (clear floats) */
+  .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
 .primary {
   background-color: var(--primary-color);
 }
